--- a/my_next/package.json
+++ b/my_next/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start",
     "export": "next export"
-
   },
   "dependencies": {
+    "mongodb": "^3.6.4",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "sass": "^1.32.8",
     "swr": "^0.4.2"
   }
 }
