--- a/my_next/package.json
+++ b/my_next/package.json
@@ -13,6 +13,9 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.32.8",
     "swr": "^0.4.2"
   }
